turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: ')' expected but ';' found.
			setCouleurBrosse(colors(i+1);
                                                    ^LangtonsAnt:12: error: ')' expected but ';' found.
			setCouleurBrosse(colors(0);
                                                  ^