turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	for (i <- 0 to colors.length-1) {
		if (getCouleurSol()==colors(i) && i != colors.length-1) {
			rule(i);
			setCouleurBrosse(colors(i+1);
			baisseBrosse();
			leveBrosse();
			
		} else if (getCouleurSol()==colors(i) && i == colors.length-1) {
			rule(i);
			setCouleurBrosse(colors(0);
			baisseBrosse();
			leveBrosse();
		}
	}
}


//Trouver la position de la couleur du sol dans la séquence de couleur;
//Tourner à gauche ou à droite selon le contenu du tableau de règle à cette position;
//Marquer le sol de la case courante avec la prochaine couleur dans la séquence ( la dernière couleur est suivie par la première);
//Avancer d'un pas